# model-based-se-assistant

./: .env.example  .gitignore  README.md  pyproject.toml
backend/: README.md  __init__.py  agents.py  config.py  graph.py  knowledge_base.py  llms.py  memory.py  schema.py  tools.py
backend/exporters/: plantuml.py
data/knowledge_base/faiss_index/: index.faiss
scripts/: check_keys.py  debug_parser.py  debug_testgen.py  debug_testgen_complex.py  demo_fallback.py  list_gemini_models.py  parse_with_llm.py  test_fallback_llm.py  test_fallback_llm_real.py  test_full_workflow.py  test_workflow_with_fallback.py
tests/: test_analysis_agent.py  test_codegen_agent.py  test_integration_graph.py  test_llms.py  test_parser_agent.py  test_parser_agent_integration.py  test_parser_fewshot.py  test_parser_scenarios.py  test_testgen_agent.py
week1/: day1.ipynb  troubleshooting.ipynb
week2/: day1.ipynb
week2/community-contributions/: Gemini-api.ipynb  day1-3 adversarial coversation.ipynb  day1_exercise_multi_conversation_bots.ipynb  day2-exercise_gradio_dropdown.ipynb  day2_message_interface_with_models.ipynb  day3.upsell.ipynb
